--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <!-- Runtime env config script (criado em tempo de execução pelo container) -->
+    <script src="%PUBLIC_URL%/env-config.js"></script>
     <title>Mapeamento Facial</title>
   </head>
   <body>
